MidnightLib v0.2.0 for 21w19a
- MidnightConfig screens can be viewed from a new screen in the minecraft options
- Code cleanup
- Examples & Documentation
- New Methods
- Upgrade to 21w19a and Java 16

MidnightConfig v1.0.0:
 - The config screen no longer shows the entries of all instances of MidnightConfig
 - Compatible with servers!
 - Scrollable!
 - Comment support!
 - Fresh new design